[tool.poetry]
name = "e2b-project"
version = "0.1.0"
description = ""
authors = ["Vasek Mlejnsky <vasek.mlejnsky@gmail.com>"]
readme = "README.md"
packages = [{include = "e2b_project"}]

[tool.poetry.dependencies]
python = "^3.10"
e2b = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
